клиентская часть на мок данных
